<resources>
    <string name="app_name">My app portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="title_nano_apps">My nanodegree apps!</string>
    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_score">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_builder">Build It Bigger</string>
    <string name="app_xyz">XYZ Reader</string>
    <string name="app_my_own">Capstone : my own app</string>
</resources>
