<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="top"
    android:background="@color/light_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_nano_apps"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_title_material"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_spotify"
        android:id="@+id/btnSpotify"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        style="@style/buttonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_score"
        android:id="@+id/btnScore"
        android:layout_below="@+id/btnSpotify"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_library"
        android:id="@+id/btnLibrary"
        android:layout_below="@+id/btnScore"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_builder"
        android:id="@+id/btnBuilder"
        android:layout_below="@+id/btnLibrary"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_xyz"
        android:id="@+id/btnXYZ"
        android:layout_below="@+id/btnBuilder"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_my_own"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnXYZ"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyleRed"/>


</RelativeLayout>
